# ad-denoise

./: .gitignore  .gitremotes  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  switcher.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: python-debian.sh
.github/: CONTRIBUTING.rst
.github/workflows/: code.yml  docs.yml
docs/: conf.py  index.rst  reference.rst
docs/developer/how-to/: make-release.rst  update-tools.rst
docs/developer/tutorials/: dev-install.rst
docs/reference/: api.rst
docs/user/how-to/: run-container.rst
docs/user/reference/: api.rst
docs/user/tutorials/: installation.rst
main/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
main/.doctrees/: environment.pickle  explanations.doctree  genindex.doctree  how-to.doctree  index.doctree  reference.doctree  tutorials.doctree
main/.doctrees/developer/explanations/: decisions.doctree
main/.doctrees/developer/how-to/: build-docs.doctree  contribute.doctree
main/.doctrees/developer/reference/: standards.doctree
main/.doctrees/reference/: api.doctree  contributing.doctree
main/.doctrees/tutorials/: installation.doctree
main/.doctrees/user/: index.doctree
main/_sources/: index.rst.txt
main/_sources/reference/: api.rst.txt
main/_sources/tutorials/: installation.rst.txt
main/_static/: documentation_options.js
main/developer/: index.html
main/developer/explanations/: decisions.html
main/developer/how-to/: build-docs.html  contribute.html  lint.html  make-release.html  run-tests.html  static-analysis.html  update-tools.html
main/developer/reference/: standards.html
main/developer/tutorials/: dev-install.html
main/reference/: api.html  contributing.html
main/tutorials/: installation.html
main/user/: index.html
main/user/explanations/: docs-structure.html
main/user/how-to/: run-container.html
main/user/reference/: api.html
main/user/tutorials/: installation.html
src/ad_denoise/: __init__.py  cli.py  utils.py
src/ad_denoise/datasets/: __init__.py  area_detector.py  collated.py  computed.py  config.py  different_pairs.py  hdf5.py  repeating.py  single_frames.py  utils.py
src/ad_denoise/lightning_modules/: __init__.py  config.py  noise2self.py
src/ad_denoise/modules/: __init__.py  blind_conv.py  config.py  gaussian.py  scalar_multiply.py  shift.py
tests/: test_ad_denoise.py
tests/datasets/: test_collated.py  test_computed.py  test_different_pairs.py  test_hdf5.py  test_repeating.py  test_single_frame.py
tests/modules/: test_gaussian.py  test_scalar_multiply.py  test_shift.py
update-skeleton/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
update-skeleton/.doctrees/: environment.pickle  index.doctree
update-skeleton/.doctrees/developer/: index.doctree
update-skeleton/_static/: documentation_options.js
update-skeleton/developer/: index.html
update-skeleton/developer/explanations/: decisions.html
update-skeleton/developer/how-to/: build-docs.html  contribute.html  lint.html  make-release.html  run-tests.html  static-analysis.html  update-tools.html
update-skeleton/developer/reference/: standards.html
update-skeleton/developer/tutorials/: dev-install.html
update-skeleton/user/: index.html
update-skeleton/user/explanations/: docs-structure.html
update-skeleton/user/how-to/: run-container.html
update-skeleton/user/reference/: api.html
update-skeleton/user/tutorials/: installation.html
(+21 files in other folders)
